objects/FinancialSnapshot__c.object
<CustomObject>
    <description>To store a detailed snapshot of a client&apos;s financial status, including current values and goals.</description>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Financial Snapshots</relationshipLabel>
        <relationshipName>FinancialSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoAppCreditScore__c</fullName>
        <label>Co-App Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Median Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonthlyDebtObligation__c</fullName>
        <label>Current Household Monthly Creditor Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossMonthlyIncome__c</fullName>
        <label>Gross Household Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HousingExpense__c</fullName>
        <label>Housing Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMonthlyIncome__c</fullName>
        <label>Net Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Snapshots</relationshipLabel>
        <relationshipName>Financial_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings__c</fullName>
        <label>Current Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAssets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalDebt__c</fullName>
        <label>Total Household Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>